here goes nothing

--- a/src/main/_popups.scss
+++ b/src/main/_popups.scss
@@ -7,3 +7,16 @@
     border: none;
     background: var($accentA);
 }
+
+//----------------new server tag----------------//
+.popover_d6f39b, .popoverGradientWrapper_d6f39b {
+    border: none;
+    background: var($accentA);
+    backdrop-filter: blur(var($blur));
+}
+
+.secondary__6af3a {
+    border: none;
+    background: var($accentA);
+}
+//----------------------------------------------//
