--- a/src/main/easterEggs.scss
+++ b/src/main/easterEggs.scss
@@ -30,3 +30,10 @@ span.headerText_c19a55:has(.username_c19a55[data-text="TNT4ME 3060"]) {
     filter: drop-shadow(0px 0px 2px oklch(0.8277 0.1014 291.18));
 }
 //--------------------------------------------------------------------//
+
+/*miku*/
+.outer_c0bea0[data-member-id="<ur discord id>"] {
+    background: url('https://tnt4me.github.io/FrostyOLED/img/miku.webp');
+    background-size: 100%;
+    background-position: 0% -50%;
+}
