--- a/src/main/leftSide/_servers.scss
+++ b/src/main/leftSide/_servers.scss
@@ -22,6 +22,9 @@
 //folders
 .folderGroupBackground__48112 {border: none;}
 
+//unread server dot
+.item__58105 {background: var($accent);}
+
 //----------------------------------server discover buttons-----------------------------------//
 .circleIconButton__5bc7e.selected__5bc7e, .circleIconButton__5bc7e:hover:not(.disabled__5bc7e) {
     background: var($accent);
