--- a/SleekCord.theme.css
+++ b/SleekCord.theme.css
@@ -3,6 +3,7 @@
  * @author TNT4ME
  * @description A pitch black theme that's sleek and modern in every way.
  * @version 1
+ * @invite G2YfSm3Md4
  * @authorId 790463558625918999
  * @source https://github.com/TNT4ME/SleekCord
  */
