--- a/SleekCord.theme.css
+++ b/SleekCord.theme.css
@@ -8,6 +8,11 @@
  * @source https://github.com/TNT4ME/SleekCord
  */
 
+/*
+LICENSE
+* https://github.com/TNT4ME/SleekCord/blob/main/LICENSE
+*/
+
 @import url('https://tnt4me.github.io/SleekCord/dist/import.css');
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital@0;1&family=Nunito:ital@0;1&display=swap');
 
