Updated $accent to $acc

--- a/src/_var.scss
+++ b/src/_var.scss
@@ -1,10 +1,10 @@
 $main: --FO-mainCol;
 $sec: --FO-secCol;
-$accent: --FO-accentCol;
+$acc: --FO-accentCol;
 $msgBar: --FO-msgBar;
 
-$accentB: --FO-accentB;
-$accentA: --FO-accentA;
+$accB: --FO-accentB;
+$accA: --FO-accentA;
 $grad: --FO-grad;
 
 $blur: --FO-blur;
