--- a/src/import.scss
+++ b/src/import.scss
@@ -16,6 +16,7 @@
 @use 'main/chat/links' as *;
 @use 'main/chat/mention' as *;
 @use 'main/chat/msgBar' as *;
+@use 'main/chat/newMsg' as *;
 @use 'main/chat/pins' as *;
 @use 'main/chat/reactions' as *;
 @use 'main/chat/serverTags' as *;
