--- a/src/main/_imageView.scss
+++ b/src/main/_imageView.scss
@@ -8,7 +8,7 @@
 //buttons
 .actionButtons_cc1819, .button_aec7ab {
     border: none;
-    background: var($accentA);
+    background: var($accA);
 }
 
 .buttonInner_aec7ab {border: none;}
