--- a/src/main/_profiles.scss
+++ b/src/main/_profiles.scss
@@ -15,12 +15,12 @@
 .lookFilled__201d5.colorBrand__201d5 { //add friend
     border: none;
     color: var($txt);
-    background: var($accent);
+    background: var($acc);
 }
 
 .platformIconContainer__9bfb9 { //connections
     border: none;
-    background: var($accentA);
+    background: var($accA);
 }
 
 //------------Fixes bug in 'More > Invite to Server'------------//
