--- a/src/main/_tooltips.scss
+++ b/src/main/_tooltips.scss
@@ -4,7 +4,7 @@
     --tooltip-pointer-bg: none;
 
     border: none;
-    background: var($accentA);
+    background: var($accA);
     backdrop-filter: blur(var($blur));
 }
 
