--- a/src/main/chat/_friendsList.scss
+++ b/src/main/chat/_friendsList.scss
@@ -7,7 +7,7 @@
 .wrapper_a45028 {border: none;}
 
 //Add Friend
-.tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf {background: var($accent);}
+.tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf {background: var($acc);}
 
 //Active Now
 .scroller__7d20c, .wrapper__00943, .section__00943 {border: none;}
