--- a/src/main/chat/_hover.scss
+++ b/src/main/chat/_hover.scss
@@ -7,13 +7,13 @@
     border: none;
     box-shadow: none !important;
     backdrop-filter: blur(var($blur));
-    background: var($accentA);
+    background: var($accA);
 }
 //--------------------------------------//
 
 //------------reaction hover------------//
 .reactionTooltip_b49891 {
-    background: var($accentA);
+    background: var($accA);
     backdrop-filter: blur(var($blur));
 }
 //--------------------------------------//
