--- a/src/main/chat/_mention.scss
+++ b/src/main/chat/_mention.scss
@@ -5,4 +5,4 @@
     background: var($mention);
 }
 
-.mentioned__5126c:hover {background: var($accentB) !important;} //ping bg
+.mentioned__5126c:hover {background: var($accB) !important;} //ping bg
