--- a/src/main/chat/_reactions.scss
+++ b/src/main/chat/_reactions.scss
@@ -1,6 +1,6 @@
 @use '../../var' as *;
 
 .reaction__23977.reactionMe__23977 {
-    background: var($accentA);
-    border-color: var($accent);
+    background: var($accA);
+    border-color: var($acc);
 }
