--- a/src/main/leftSide/_dm.scss
+++ b/src/main/leftSide/_dm.scss
@@ -5,15 +5,15 @@
 .visual-refresh .scroller__99e7c {background: var($main);}
 
 //dc official bot
-.botTagRegular__82f07 {background: var($accent);}
+.botTagRegular__82f07 {background: var($acc);}
 
 //hover//
 .interactiveSelected__972a0 {
     color: var($txt);
-    background: var($accentA);
+    background: var($accA);
 }
 
-.interactiveSelected__972a0:hover {background: var($accent);}
+.interactiveSelected__972a0:hover {background: var($acc);}
 //-----//
 
 //profile sidebar
