--- a/src/main/_popups.scss
+++ b/src/main/_popups.scss
@@ -5,18 +5,18 @@
 
 .menu_c1e9c4 {
     border: none;
-    background: var($accentA);
+    background: var($accA);
 }
 
 //----------------new server tag----------------//
 .popover_d6f39b, .popoverGradientWrapper_d6f39b {
     border: none;
-    background: var($accentA);
+    background: var($accA);
     backdrop-filter: blur(var($blur));
 }
 
 .secondary__6af3a {
     border: none;
-    background: var($accentA);
+    background: var($accA);
 }
 //----------------------------------------------//
