--- a/src/main/_profileWiget.scss
+++ b/src/main/_profileWiget.scss
@@ -2,7 +2,7 @@
 
 .visual-refresh .panels_c48ade { //bg
     border: none;
-    background: var($accentA);
+    background: var($accA);
     backdrop-filter: blur(var($blur));
 }
 
@@ -11,7 +11,7 @@
 //-----------------activity panel-----------------//
 .activityPanel_c48ade {border: none;}
 
-.showMoreButton__84832 {background: var($accentB);}
+.showMoreButton__84832 {background: var($accB);}
 
 .panel__5dec7 {background: none}
 //------------------------------------------------//
