--- a/src/main/_serverTags.scss
+++ b/src/main/_serverTags.scss
@@ -2,6 +2,6 @@
 
 .container_dca174, .spinnerContainer_d3846c  {
     border: none;
-    background: var($accentA);
+    background: var($accA);
     backdrop-filter: blur(var($blur));
 }
