--- a/src/main/chat/_threadsList.scss
+++ b/src/main/chat/_threadsList.scss
@@ -1,7 +1,7 @@
 @use '../../var' as *;
 
 .container_d9c882 {
-    background: var($accentA);
+    background: var($accA);
     backdrop-filter: blur(var($blur));
 }
 
@@ -11,7 +11,7 @@
 }
 
 //hov
-.container__6764b:hover {background: var($accentB);}
+.container__6764b:hover {background: var($accB);}
 
 //icon
 .closeIcon_d9c882, .threadIcon_d9c882 {color: var($icon);}
