idk but it didn't break

--- a/src/main/chat/_topBar.scss
+++ b/src/main/chat/_topBar.scss
@@ -1,5 +1,11 @@
 @use '../../var' as *;
 
+//taskbar//
+.bar_c38106 {
+    background: $main;
+}
+//-------//
+
 .visual-refresh .title_f75fb0 {
     border: none;
     background: var($main);
