--- a/SleekCord.theme.css
+++ b/SleekCord.theme.css
@@ -24,7 +24,7 @@ LICENSE
     --FO-secCol: #0c0c0c; /*Secondary background color | Default value: #0c0c0c*/
     --FO-accentCol: oklch(0.7073 0.1808 291.18); /*Secondary background color | Default value: oklch(0.7073 0.1808 291.18)*/
 
-    --FO-gradCol1: var(--FO-accentA); /*Gradient color 1| Default value: --FO-accentA*/
+    --FO-gradCol1: var(--FO-accentA); /*Gradient color | Default value: --FO-accentA*/
     --FO-gradCol2: oklch(0.8909 0.2062 191.37 / 0.3); /*Gradient color 2| Default value: oklch(0.8909 0.2062 191.37 / 0.3)*/
 
     --FO-blur: 15px; /*Controls the blur amount of everything | Default value: 15px*/ 
@@ -44,4 +44,7 @@ LICENSE
     --FO-icon: var(--FO-txtCol); /*Icon color | Default value: --FO-txtCol*/
 
     --FO-msgBar: #111; /*Message bar color | Default value: #111*/
+}
+small .emojiContainerClickable__75abc {
+    color: #f0f;
 }
