--- a/src/main/_profileWiget.scss
+++ b/src/main/_profileWiget.scss
@@ -1,6 +1,6 @@
 @use '../var' as *;
 
-.visual-refresh .panels_c48ade { //bg
+.container__37e49 { //bg
     border: none;
     background: var($accA);
     backdrop-filter: blur(var($blur));
