--- a/src/import.scss
+++ b/src/import.scss
@@ -14,6 +14,7 @@
 @use 'main/chat/friendsList' as *;
 @use 'main/chat/hover' as *;
 @use 'main/chat/links' as *;
+@use 'main/chat/main' as *;
 @use 'main/chat/mention' as *;
 @use 'main/chat/msgBar' as *;
 @use 'main/chat/newMsg' as *;
