--- a/src/_var.scss
+++ b/src/_var.scss
@@ -5,7 +5,10 @@ $msgBar: --FO-msgBar;
 
 $accB: --FO-accentB;
 $accA: --FO-accentA;
+
 $grad: --FO-grad;
+$grad1: --FO-gradCol1;
+$grad2: --FO-gradCol2;
 
 $blur: --FO-blur;
 $opa: --FO-opa;
