--- a/src/main/chat/_friendsList.scss
+++ b/src/main/chat/_friendsList.scss
@@ -1,5 +1,8 @@
 @use '../../var' as *;
 
+//Find or start convo
+.searchBar_e6b769 {background: var($main);}
+
 //Friends: Online All Pending
 .theme-dark .themed__9293f {background: var($main);}
 
