--- a/src/main/chat/_msgBar.scss
+++ b/src/main/chat/_msgBar.scss
@@ -12,6 +12,10 @@
 }
 //----------------------------------------------------------------------------//
 
+//--------useless gradient bar--------//
+.chatGradient__36d07 {background: none;}
+//------------------------------------//
+
 //---------------------------------file upload---------------------------------//
 .upload_aa605f {
     background: none;
