--- a/src/_var.scss
+++ b/src/_var.scss
@@ -22,6 +22,7 @@ $profileOpa: --FO-profileOpa;
 
 $txt: --FO-txtCol;
 $link: --FO-linkCol;
+$font: --FO-font;
 $code: --FO-code;
 
 $icon: --FO-icon;
