Fix Profile Wiget

--- a/src/main/_profileWiget.scss
+++ b/src/main/_profileWiget.scss
@@ -1,6 +1,6 @@
 @use '../var' as *;
 
-.container__37e49 { //bg
+.container__37e49, .panels__5e434 { //bg
     border: none;
     background: var($accA);
     backdrop-filter: blur(var($blur));
