Fix emoji picker

--- a/src/main/_root.scss
+++ b/src/main/_root.scss
@@ -14,6 +14,7 @@
     --brand-500: var(--FO-accentCol);
 
     --modal-background: none;
+    --autocomplete-bg: var(--FO-accentA);
 
     --border-normal: var(--FO-accentCol);
     
