--- a/src/main/_tooltips.scss
+++ b/src/main/_tooltips.scss
@@ -1,6 +1,6 @@
 @use '../var' as *;
 
-.tooltipPrimary__382e7 {
+.tooltipPrimary__c36707 {
     --tooltip-pointer-bg: none;
 
     border: none;
@@ -8,4 +8,4 @@
     backdrop-filter: blur(var($blur));
 }
 
-.tooltipPointer__382e7.tooltipPointerBg__382e7 {display: none;}
+.tooltipPointer__c36707.tooltipPointerBg__c36707 {display: none;}
